--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ function funkify() {
 }
 </script>
 
+
+
 <script>
 // LIGHT BULB
 // The logic
@@ -53,6 +55,19 @@ function light(sw) {
 </script>
 
 <img src="pic_bulboff.gif" width="100" height="180" alt="" id="myImage">
+
+<p>
+  <button type="button" onclick="light(1)">Light On</button>
+  <button type="button" onclick="light(0)">Light Off</button>
+</p>
+
+
+
+
+
+
+
+
 <script>
 function myFunction() { 
   document.getElementById("demo").innerHTML = "Hello JavaScript!";
