--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@ function changeSize() {
     document.write(5 + 6)
   }
 </script>
+
+<p id="windowAlert">This is the Almighty Page Clearer</p>
+<button onclick="windowAlert()">Popping</button>
+
+<script>
+  function windowAlert() {
+    alert('Answer is: ' + 5 + 6)
+  }
+</script>
+
+<button onclick="window.print()">Print Entire Page</button>
 </body>
 </html>
 
