--- a/further.html
+++ b/further.html
@@ -16,6 +16,15 @@
     <p id="demo2"></p>
     <p id="demo3"></p>
     <p id="demo4"></p>
+
+    <hr>
+    <h3>Javascript Functions</h3>
+    <p>This example calls a function which performs a calculation and returns the result</p>
+    <p id="democ"></p>
+    <hr>
+    <p>We can convert fahrenheit to celcius</p>
+    <p id="fToC"></p>
+    <hr>
     <script src="/further.js"></script>
 </body>
 </html>
