--- a/DAY 3/Bonus 3/search.html
+++ b/DAY 3/Bonus 3/search.html
@@ -8,6 +8,7 @@
       href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="search.css" />
 
     <title>Hidden Search Bar</title>
   </head>
@@ -18,5 +19,7 @@
         <i class="bx bx-search"></i>
       </button>
     </div>
+
+    <script src="search.js"></script>
   </body>
 </html>
